--- a/iterm/com.googlecode.iterm2.plist.example
+++ b/iterm/com.googlecode.iterm2.plist.example
@@ -1453,7 +1453,7 @@
 			<key>Window Type</key>
 			<integer>0</integer>
 			<key>Working Directory</key>
-			<string>/Users/carlosabecker</string>
+			<string>/Users/fanta</string>
 		</dict>
 	</array>
 	<key>NoSyncHaveUsedCopyMode</key>
@@ -1522,7 +1522,7 @@
 		</dict>
 	</dict>
 	<key>PrefsCustomFolder</key>
-	<string>/Users/carlos/.dotfiles/iterm</string>
+	<string>/Users/fanta/.dotfiles/iterm</string>
 	<key>Print In Black And White</key>
 	<true/>
 	<key>PromptOnClose</key>
